# Fmask-v5

./: .editorconfig  .gitignore  README.md  conda-pypi-map.json  pixi.toml  pyproject.toml
main/: fmask.py  fmask_batch.py
main/job/: slurm_job_run_fmask.sh
recipe/: recipe.yaml
scripts/: slurm_job_run_fmask.sh
src/: fmasklib.py  lightgbmlib.py  phylib.py  satellite.py  unetlib.py  utils.py
src/fmask/: __init__.py  _paths.py  fmasklib.py  lightgbmlib.py  phylib.py  predictor.py  satellite.py  unetlib.py  utils.py
src/fmask/cli/: data.py  fmask.py  fmask_batch.py  fmask_single.py
